CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(VSP_GRAPHIC_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE PATH "Path to vsp_graphic headers")

set(GRAPHIC_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)

FILE(GLOB_RECURSE GRAPHIC_HEADER ./include/*.h)
FILE(GLOB_RECURSE GRAPHIC_SOURCE ./src/*.cpp)

INCLUDE_DIRECTORIES( ${GRAPHIC_INCLUDE}
${GLEW_INCLUDE_PATH}
${GLM_INCLUDE_DIR}
${STB_INCLUDE_DIR}
${GLFONT2_INCLUDE_DIR}
)

ADD_LIBRARY(vsp_graphic
${GRAPHIC_HEADER}
${GRAPHIC_SOURCE}
)

ADD_DEPENDENCIES(vsp_graphic
stb_image
glfont2
)

TARGET_LINK_LIBRARIES(vsp_graphic
glfont2
stb_image
${GLEW_LIBRARY}
${OPENGL_LIBRARIES}
)
