CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

INCLUDE_DIRECTORIES(
    ${LIBXML2_INCLUDE_DIR}
    ${UTIL_INCLUDE_DIR}
    ${EIGEN3_INCLUDE_DIR}
    ${CodeEli_INCLUDE_DIRS}
    )

SET(XMLVSP_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE PATH "Path to XML wrapper header.")

ADD_LIBRARY(xmlvsp
XmlUtil.h
XmlUtil.cpp

)
